Release Notes for the event package
-----------------------------------
event-R4-2-5: 2016-07-13 C. Bianchini and S. Allison
	* Move record processing requests of BSA nan values from evrTask
	  to evrEventTask so the scanIoRequests done at lower priority.
	* Ignore records with timestamp of 0/0.

event-R4-2-4: 2016-06-23 B. Hill
	* Bug fix for RTEMS crash when EVR driver is generating errors while ErDebug is non-zero
 	* MISCUTILS_MODULE_VERSION=miscUtils-R2-2-3
	* Added functions to provide the last fiducial and cpu tsc from ISR level:
		int evrGetLastFiducial();
		unsigned long long  evrTimeGetFiducialTsc();

event-R4-2-3: 2016-06-17 C. Bianchini
      * Bug Fix for EDEF after 10 to receive the bit from the EVG to notify when the acquisition is done.
      * Changed the RMS calculation as required after meeting with physicists and the photon side
      * Change the flag the miss data as SOFT_INVALID (15) and to keep the status of the data from the Engineer application.

event-R4-2-2: 2016-05-17 C. Bianchini
      * Add Pulse ID compress record in BSA. (This includes changes in bsaEdefAvg.d)
      * Add NAN values when the data are not available for a specific pulse ID
      * Add a check for a signal from the EVG to say "The aquisition is done". This feature will start working only when the 	    EVG module new release will be pushed.
      * move the square calculation for rms in a lower priority function
      * evrFixed 64vs32 bit errors in aSubEvOffset that broke invariant timing lookup on 64 bit hosts 
        (for evrEvInvariantDelay.c, this changes has been made by Bruce Hill)

event-R4-2-1: 2016-04-04 K. Kim
      * To avoid undefine symbol for "int_showme, dbuf_showme and event_showme" in RTEMS
        define dummy variable for RTMES. These variables has been introduce for special debugging for linux/linuxRT 

event-R4-2-0: 2015-08-18 K. Kim
      * Include Tomo's EMCOR EVR support